Update file ch00_markdown

--- a/Python_Basic_ch00_markdown.ipynb
+++ b/Python_Basic_ch00_markdown.ipynb
@@ -99,7 +99,7 @@
     "$y=3x+b$\n",
     "\n",
     "인용구  \n",
-    "> Life is short, you need ptyhon :)"
+    "> Life is short, you need ptyhon :("
    ]
   }
  ],
