--- a/Python_Basic_ch02_문자열 타이의 이해.ipynb
+++ b/Python_Basic_ch02_문자열 타이의 이해.ipynb
@@ -296,24 +296,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "97dbb0cb",
+   "execution_count": null,
+   "id": "2b2cf431",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# split() : 구분자를 기준으로 문자열 분할, default 구분자 공백\n",
+    "a = \"hello world what a nice weather\"\n",
+    "print(a.split(\"w\"))\n",
+    "print(a.split())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "cb205e8c",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['hello ', 'orld ', 'hat a nice ', 'eather']\n",
-      "['hello', 'world', 'what', 'a', 'nice', 'weather']\n"
+      "아이디:          ccw1104       , 길이: 23\n",
+      "아이디: ccw1104, 길이: 7\n"
      ]
     }
    ],
    "source": [
-    "# split() : 구분자를 기준으로 문자열 분할, default 구분자 공백\n",
-    "a = \"hello world what a nice weather\"\n",
-    "print(a.split(\"w\"))\n",
-    "print(a.split())"
+    "# strip() : 문자열의 좌우공백을 제거\n",
+    "id = \"         ccw1104       \"\n",
+    "print(f\"아이디: {id}, 길이: {len(id)}\")\n",
+    "print(f\"아이디: {id.strip()}, 길이: {len(id.strip())}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "7f8f0257",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "3\n",
+      "6\n",
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "# find() and rfind()\n",
+    "#  - 문자열 내부의 특정 문자의 인덱스를 출력\n",
+    "str = \"Hello Python\"\n",
+    "print(str.find(\"l\"))\n",
+    "print(str.rfind(\"l\"))\n",
+    "print(str.find(\"Python\"))\n",
+    "print(str.rfind(\"Python\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "ca28db30",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "# in() : 특정 문자열을 포함하고 있는지 확인(True, False)\n",
+    "\n",
+    "print(\"Hi\" in \"Hi Python\")\n",
+    "print(\"Hi\" in \"Hello Python\")"
    ]
   }
  ],
