--- a/Python_Basic_ch03_컬렉션 타입의 이해.ipynb
+++ b/Python_Basic_ch03_컬렉션 타입의 이해.ipynb
@@ -193,7 +193,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f7d7d94",
+   "id": "3345d721",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "9479c2a5",
+   "id": "a20e1a62",
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "bb177dea",
+   "id": "edc38bbf",
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +250,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "613e8561",
+   "id": "7847062f",
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "c933e72c",
+   "id": "7bd35480",
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +296,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "2f110eda",
+   "id": "ff932a13",
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a795fddc",
+   "id": "ceb41d6d",
    "metadata": {},
    "source": [
     "### 2.tuple"
@@ -336,7 +336,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "0cdefae0",
+   "id": "f74126cd",
    "metadata": {
     "scrolled": true
    },
@@ -382,7 +382,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "d1ed52a3",
+   "id": "014aa017",
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c470966",
+   "id": "304cff59",
    "metadata": {},
    "source": [
     "### 연습문제\n",
@@ -415,7 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "62f78d2c",
+   "id": "16f5a1b0",
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8aaf7a75",
+   "id": "79d047e8",
    "metadata": {},
    "source": [
     "### 3.dict"
@@ -455,7 +455,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "430a9090",
+   "id": "9ab7b8c4",
    "metadata": {},
    "outputs": [
     {
@@ -479,7 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "e2c49809",
+   "id": "87e1b0ce",
    "metadata": {},
    "outputs": [
     {
@@ -512,7 +512,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "068b845a",
+   "id": "9fec7860",
    "metadata": {},
    "outputs": [
     {
@@ -541,7 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "57837218",
+   "id": "cf8df512",
    "metadata": {},
    "outputs": [
     {
@@ -563,7 +563,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "77c22ea9",
+   "id": "964d9628",
    "metadata": {},
    "outputs": [
     {
@@ -585,7 +585,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "6faa25e2",
+   "id": "11cc3ace",
    "metadata": {},
    "outputs": [
     {
@@ -604,7 +604,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "8f2563e9",
+   "id": "5a85605f",
    "metadata": {},
    "outputs": [
     {
@@ -621,6 +621,114 @@
     "print(a)\n",
     "a.clear()\n",
     "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "81acfd0a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('a', 1), ('b', 2)]\n",
+      "<class 'list'>\n",
+      "<class 'tuple'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# keys() : key값만 반환\n",
+    "# values() : value값만 반환\n",
+    "# items() : key, value를 튜플로 반환\n",
+    "\n",
+    "a = {\n",
+    "    \"a\" : 1,\n",
+    "    \"b\" : 2\n",
+    "}\n",
+    "\n",
+    "# print(a)\n",
+    "# print(a.keys())\n",
+    "# print(type(a.keys()))\n",
+    "# print(a.values())\n",
+    "# print(type(a.values()))\n",
+    "# print(a.items())\n",
+    "# print(type(a.items()))\n",
+    "\n",
+    "# print(list(a.keys()))\n",
+    "# print(type(list(a.keys())))\n",
+    "\n",
+    "print(list(a.items()))\n",
+    "\n",
+    "val = list(a.items())\n",
+    "\n",
+    "print(type(val))\n",
+    "print(type(val[0]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7a96bc63",
+   "metadata": {},
+   "source": [
+    "### 4.set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "a4112400",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 1, 1, 2, 2, 2, 3, 3, 4, 4, 5]\n",
+      "{1, 2, 3, 4, 5}\n",
+      "<class 'dict'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "list_z = [1, 1, 1, 2, 2, 2, 3, 3, 4, 4, 5]\n",
+    "print(list_z)\n",
+    "\n",
+    "set_a = set(list_z)\n",
+    "print(set_a)\n",
+    "\n",
+    "# set? or dict?\n",
+    "j = {}\n",
+    "print(type(j))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "fe31db01",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 3, 4}\n",
+      "{2, 3}\n",
+      "{1}\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = {1, 2, 3}\n",
+    "b = {2, 3, 4}\n",
+    "\n",
+    "print(a.union(b))         # 합집합\n",
+    "print(a.intersection(b))  # 교집합\n",
+    "print(a.difference(b))    # 차집합\n",
+    "print(a.issubset(b))        # 부분집합(b가 {1, 2, 3, 4}이면 True 반환)"
    ]
   }
  ],
